@@ -20,6 +20,7 @@ Version 1.0.xxxx (January xxth 2014)
 - Implemented: Light Log, Arm/Disarm/Motion/No Motion now also visible in graph
 - Implemented: OpenZWave, option to include/exclude nodes, support for windows COM port numbers greater then 9
 - Fixed: Razberry, supports now devices with multiple switches (SENSOR_BINARY)
+- Changed: Other method to retrieve raspberry pi temperature
 
 Version 1.0.1396 (January 18th 2014)
 - Implemented: new commandline option to specify www root folder (-wwwroot)
